--- a/index.html
+++ b/index.html
@@ -4,17 +4,22 @@
 <title>Ariz Tech</title>
 <style>
     body{
-        background-color: #FFFFEAEA;
+        background-color: #FFB0B0B0;
     }
     .testimony{
         text-align: center;
+        background-image: url("art-bg.png");
+        color: yellow;
+        font-weight: bold;
+        padding: 6px;
+        text-shadow: black;
     }
     .testimony:first-letter{
         font-size: 22px;
     }
     .testimony-people{
         text-align: right;
-        font-weight: bold;
+        font-weight: bold;        
     }
     h3{
         text-decoration: underline;
