--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     }
     .testimony{
         text-align: center;
-        background-image: url("art-bg.png");
+        background-image: url("comp-bg.png");
         color: yellow;
         font-weight: bold;
         padding: 6px;
