--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     .testimony{
         text-align: center;
         background-image: url("comp-bg.png");
-        color: yellow;
+        color: blue;
         font-weight: bold;
         padding: 6px;
         text-shadow: black;
