--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
     .testimony{
         text-align: center;
         background-image: url("comp-bg.png");
+        background-repeat: no-repeat;
+        background-size: cover;
+        background-attachment: fixed;
         color: blue;
         font-weight: bold;
         padding: 6px;
