--- a/Copywriter.html
+++ b/Copywriter.html
@@ -14,7 +14,7 @@
     </style>
 </head>
 <body>
-    <img src="ariz.jpg" alt="Logo" class="logo">
+    <img src="Screenshot_20221113-100335-removebg-preview.png" alt="Logo" class="logo">
     <center><h1>Ariyo's Copywriting Portfolio</h1></center>
    <h2> Introduction </h2>
 
