--- a/Copywriter.html
+++ b/Copywriter.html
@@ -4,6 +4,10 @@
     <meta charset="UTF-8">
     <title>Page title</title>
     <style>
+h1{
+text-align: center;
+text-decoration: underline;
+}
         body{
         background-color: #FFB0B0B0;
     }
@@ -15,7 +19,7 @@
 </head>
 <body>
     <img src="Screenshot_20221113-100335-removebg-preview.png" alt="Logo" class="logo">
-    <center><h1>Ariyo's Copywriting Portfolio</h1></center>
+    <h1>Ariyo's Copywriting Portfolio</h1>
    <h2> Introduction </h2>
 
 <p>Ariyo is a professional copywriter with over five years of experience in the field. In this portfolio, you will find a collection of her best work.</p>
