--- a/Copywriter.html
+++ b/Copywriter.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Page title</title>
+    <title>Ariyo copywrites</title>
     <style>
 h1{
 text-align: center;
