--- a/Copywriter.html
+++ b/Copywriter.html
@@ -22,19 +22,19 @@ text-decoration: underline;
     <h1>Ariyo's Copywriting Portfolio</h1>
    <h2> Introduction </h2>
 
-<p>Ariyo is a professional copywriter with over five years of experience in the field. In this portfolio, you will find a collection of her best work.</p>
+<p>Ariyo is a professional copywriter with over five years of experience in the field. In this portfolio, you will find a collection of his best work.</p>
 
-<p>Ariyo has worked with a variety of brands, both large and small, and has experience with a wide range of copywriting projects. She is skilled in writing both web copy and print copy, and is also knowledgeable in SEO best practices.</p>
+<p>Ariyo has worked with a variety of brands, both large and small, and has experience with a wide range of copywriting projects. He is skilled in writing both web copy and print copy, and is also knowledgeable in SEO best practices.</p>
 
-<p>If you are in need of a skilled and experienced copywriter, Ariyo is the perfect person for the job. Contact her today to discuss your project.</p>
+<p>If you are in need of a skilled and experienced copywriter, Ariyo is the perfect person for the job. Contact him today to discuss your project.</p>
 
 <h2>What Is Copywriting?</h2>
 
 <p>Copywriting is the process of writing persuasive, effective and interesting marketing materials. This might include website content, brochures, social media posts, and even email newsletters.</p>
 
-<p>As a professional copywriter, Ariyo has extensive experience in creating content that engages the reader and drives conversions. In fact, her clients have seen as much as a 300% increase in leads and web traffic after working with her.</p>
+<p>As a professional copywriter, Ariyo has extensive experience in creating content that engages the reader and drives conversions. In fact, his clients have seen as much as a 300% increase in leads and web traffic after working with him.</p>
 
-<p>If you're looking for someone to help you create engaging and effective marketing materials, then Ariyo is certainly someone you should consider. Take a look at her portfolio to see some of her previous work.</p>
+<p>If you're looking for someone to help you create engaging and effective marketing materials, then Ariyo is certainly someone you should consider. Take a look at his portfolio to see some of his previous work.</p>
 
 <h2>What Services Does a Copywriter Provide?</h2>
 
@@ -60,11 +60,11 @@ text-decoration: underline;
 
 <h2>Ariyo's Portfolio Overview</h2>
 
-<p>Ariyo's copywriting portfolio is an impressive representation of her work. She has crafted a wide range of pieces for clients in multiple industries. Her portfolio includes website Home page and About page content, product descriptions, blog posts, e-mails, and more.</p>
+<p>Ariyo's copywriting portfolio is an impressive representation of his work. He has crafted a wide range of pieces for clients in multiple industries. His portfolio includes website Home page and About page content, product descriptions, blog posts, e-mails, and more.</p>
 
-<p>Ariyo employs various writing techniques to create engaging, relevant copy that resonates with audiences. She understands the importance of exploring different tones and styles to capture the attention of readers. As a result, her work is both creative and persuasive while staying on-brand.</p>
+<p>Ariyo employs various writing techniques to create engaging, relevant copy that resonates with audiences. He understands the importance of exploring different tones and styles to capture the attention of readers. As a result, his work is both creative and persuasive while staying on-brand.</p>
 
-<p>Overall, Ariyo's portfolio is an excellent representation of her vast experience as a professional copywriter. Her expert use of language makes her the perfect choice for any business looking to craft compelling, impactful content.</p>
+<p>Overall, Ariyo's portfolio is an excellent representation of his vast experience as a professional copywriter. His expert use of language makes him the perfect choice for any business looking to craft compelling, impactful content.</p>
 
 <h2>Projects Included in Ariyo's Portfolio</h2>
 
