--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
     body{
         background-color: #FFB0B0B0;
     }
+    .nav{
+        text-align: right;
+    }
     .testimony{
         text-align: center;
         background-image: url("comp-bg.png");
@@ -31,6 +34,10 @@
 </style>
 </head>
 <body>
+    <div class="nav">
+        <a href="#">Home</a>
+        <a href="about.html">About Us</a>
+    </div>
 <h3>What is Ariz Tech</h3>
 <p>Ariz Tech is a leading provider of graphic design, website development and cyber security services. We have a team of highly skilled and experienced professionals who are dedicated to providing the best possible service to our clients.</p>
 <p>We offer a wide range of graphic design services that can help you to create a professional and unique identity for your business. Our team of designers can create a logo, business cards, website graphics, and much more.</p>
