--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         background-repeat: no-repeat;
         background-size: cover;
         background-attachment: fixed;
-        color: blue;
+        color: #ccc;
         font-weight: bold;
         padding: 6px;
         text-shadow: black;
