--- a/index.html
+++ b/index.html
@@ -6,6 +6,10 @@
     body{
         background-color: #FFB0B0B0;
     }
+    .logo{
+        height: 160px;
+        width: 250px;
+    }
     .nav{
         text-align: right;
     }
@@ -34,6 +38,9 @@
 </style>
 </head>
 <body>
+    <div class="logo">
+        <img src="Screenshot_20221113-100335-removebg-preview.png" alt="logo">
+    </div>
     <div class="nav">
         <a href="#">Home</a>
         <a href="about.html">About Us</a>
