--- a/index.html
+++ b/index.html
@@ -6,9 +6,9 @@
     body{
         background-color: #FFB0B0B0;
     }
-    .logo{
-        height: 17px;
-        width: 25px;
+    .logo img{
+        height: 160px;
+        width: 250px;
     }
     .nav{
         text-align: right;
