--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         background-repeat: no-repeat;
         background-size: cover;
         background-attachment: fixed;
-        color: #ccc;
+        color: gold;
         font-weight: bold;
         padding: 6px;
         text-shadow: black;
