--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
         background-color: #FFB0B0B0;
     }
     .logo img{
-        height: 32px;
-        width: 32px;
+        height: 50px;
+        width: 50px;
     }
     .nav{
         text-align: right;
@@ -39,7 +39,7 @@
 </head>
 <body>
     <div class="logo">
-        <img src="Screenshot_20221113-100335-removebg-preview.png" alt="logo">
+        <a href="https://ariyoaresa.github.io/Ariz-Tech"><img src="Screenshot_20221113-100335-removebg-preview.png" alt="logo"></a>
     </div>
     <div class="nav">
         <a href="#">Home</a>
